--- a/a02/css/style.css
+++ b/a02/css/style.css
@@ -1,3 +1,10 @@
+/**
+*
+*  title	: JavaScript Lab 02, Client-side Programming I && II
+*  author	: orem18kz
+*  email	: orem18kz[@]student,ju,se
+*
+*/
 /****************
 ** General CSS **
 ****************/
@@ -12,17 +19,17 @@ header { width: 80%; margin: 0 auto; }
 /************
 ** Sandbox **
 ************/
-#sandbox { 
-	width: 90%; 
-	min-width: 600px; 
-	background-color: #EDEDED; 
-	font-family: 'Dosis', sans-serif; 
+#sandbox {
+	width: 90%;
+	min-width: 600px;
+	background-color: #EDEDED;
+	font-family: 'Dosis', sans-serif;
 	text-align: center;
-	margin: 0 auto; 
-	padding: 1.12em 0; 
-	border: 8px solid #474747; 
-	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5); 
-	border-radius: 8px; 
+	margin: 0 auto;
+	padding: 1.12em 0;
+	border: 8px solid #474747;
+	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5);
+	border-radius: 8px;
 }
 #sandbox ul { list-style: none; }
 
