--- a/a02/css/style.css
+++ b/a02/css/style.css
@@ -16,10 +16,10 @@ header { width: 80%; margin: 0 auto; }
 	header h1 { text-align: center; }
 	header h2 { margin-bottom: 0; }
 	header ul { width: 65%; margin-top: 0.5em; }
-/************
-** Sandbox **
-************/
-#sandbox {
+/***************
+** playground **
+***************/
+#playground {
 	width: 90%;
 	min-width: 600px;
 	background-color: #EDEDED;
@@ -31,7 +31,7 @@ header { width: 80%; margin: 0 auto; }
 	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5);
 	border-radius: 8px;
 }
-#sandbox ul { list-style: none; }
+#playground ul { list-style: none; }
 
 /***********
 ** footer **
