--- a/a05/style.css
+++ b/a05/style.css
@@ -18,11 +18,11 @@ header { width: 80%; margin: 0 auto; }
 	header h1 { text-align: center; }
 	header h2 { margin-bottom: 0; }
 	header ul { width: 65%; margin-top: 0.5em; }
-/************
-** Sandbox **
-************/
-#sandbox {  }
-#sandbox {
+/***************
+** playground **
+****************/
+#playground {  }
+#playground {
 	width: 90%;
 	min-width: 600px;
 	background-color: #EDEDED;
@@ -32,7 +32,7 @@ header { width: 80%; margin: 0 auto; }
 	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5);
 	border-radius: 8px;
 }
-	#sandbox h2 { text-align: center; margin: 0 auto; padding: 0; }
+	#playground h2 { text-align: center; margin: 0 auto; padding: 0; }
 /************
 ** Wrapper **
 ************/
