fixing some css and html

--- a/a06/css/style.css
+++ b/a06/css/style.css
@@ -33,7 +33,7 @@ header { width: 80%; margin: 0 auto; }
 	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5);
 	border-radius: 8px;
 }
-	#playground h2 { text-align: center; margin: 0 auto; padding: 0; }
+	#playground h2 { text-align: center; margin: 0.56em auto; padding: 0; }
 /************
 ** sandbox **
 ************/
