--- a/css/style.css
+++ b/css/style.css
@@ -16,22 +16,25 @@ header { width: 80%; margin: 0 auto; }
 /************
 ** Sandbox **
 ************/
-#sandbox { 
-	width: 90%; 
-	min-width: 600px; 
-	background-color: #EDEDED; 
-	font-family: 'Dosis', sans-serif; 
-	text-align: center;
-	margin: 0 auto; 
-	padding: 1.12em 0; 
-	border: 8px solid #474747; 
-	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5); 
-	border-radius: 8px; 
+#sandbox {
+	width: 90%;
+	min-width: 600px;
+	background-color: #EDEDED;
+	font-family: 'Dosis', sans-serif;
+	text-align: left;
+	margin: 0 auto;
+	padding: 1.12em 0;
+	border: 8px solid #474747;
+	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5);
+	border-radius: 8px;
 }
+	#sandbox p:first-of-type,#tree {  width: 30%; margin: 0 auto 0 40%; }
 /************
-** folders ** 
+** folders **
 ************/
-#tree { width: 255px; margin: 0 auto; padding: 0; list-style-type: none; }
+#tree { padding: 0 0 0 2%; list-style-type: none; }
+#tree li { margin-top: 0.56em; }
+	#tree li + li { margin-top: 0.15em; }
 /***********
 ** footer **
 ***********/
