adding pastbins to assignments

--- a/a01/css/style.css
+++ b/a01/css/style.css
@@ -9,6 +9,7 @@
 ** General CSS **
 ****************/
 body { font-family: 'Gentium Basic', serif; font-size: 100%; margin: 0 auto; }
+#playground,aside { width: 90%;	margin: 0 auto; }
 /***********
 ** header **
 ***********/
@@ -19,21 +20,26 @@ header { width: 80%; margin: 0 auto; }
 /***************
 ** playground **
 ***************/
-#playground {
-	width: 90%;
-	min-width: 600px;
-	background-color: #EDEDED;
-	font-family: 'Dosis', sans-serif;
-	text-align: center;
-	margin: 0 auto;
-	padding: 1.12em 0;
-	border: 8px solid #474747;
-	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5);
-	border-radius: 8px;
-}
+#playground { min-width: 600px; font-family: 'Dosis', sans-serif; text-align: center; border: 8px solid #474747; }
+#playground,aside div.sourceCode { background-color: #ededed; padding: 1.12em 0; box-shadow: 3px 3px 6px rgba(43, 83, 117,.5); border-radius: 8px; }
+/**********************
+** Source Code holder **
+***********************/
+aside  { padding: 0.52%;  }
+	aside h2 { text-align: center; }
+	aside p { max-width: 800px; text-align: center; margin: 0.56em auto; }
+		aside p a { font-size: 110%; text-decoration: none; }
+	aside div.sourceCode { width: 80%;  display: none; margin: 0 auto; border: 8px solid #CCC; }
+		aside div.sourceCode iframe { width: 85%; height: 800px; margin: 0 auto; display: block; }
 /***********
-** Record **
-************/
+** footer **
+***********/
+footer p { text-align: center; }
+/*******************
+** Particular css **
+********************
+**     #record    **
+*******************/
 #record {
 	width: 65%;
 	font-family: 'Muli', sans-serif;
@@ -78,7 +84,3 @@ header { width: 80%; margin: 0 auto; }
 	#average span { font-weight: normal; }
 	#average span:before { content:'\A'; white-space:pre; }
 	#average span:after   { font-size: 60%; content:'\Aguesses/won games'; white-space:pre; }
-/***********
-** footer **
-***********/
-footer p { text-align: center; }
