--- a/a02/css/style.css
+++ b/a02/css/style.css
@@ -32,7 +32,16 @@ header { width: 80%; margin: 0 auto; }
 	border-radius: 8px;
 }
 #playground ul { list-style: none; }
-
+#playground,aside div.sourceCode { background-color: #ededed; padding: 1.12em 0; box-shadow: 3px 3px 6px rgba(43, 83, 117,.5); border-radius: 8px; }
+/**********************
+** Source Code holder **
+***********************/
+aside  { padding: 0.52%;  }
+	aside h2 { text-align: center; }
+	aside p { max-width: 800px; text-align: center; margin: 0.56em auto; }
+		aside p a { font-size: 110%; text-decoration: none; }
+	aside div.sourceCode { width: 80%;  display: none; margin: 0 auto; border: 8px solid #CCC; }
+		aside div.sourceCode iframe { width: 85%; height: 800px; margin: 0 auto; display: block; }
 /***********
 ** footer **
 ***********/
