--- a/a03/css/style.css
+++ b/a03/css/style.css
@@ -31,6 +31,25 @@ header { width: 80%; margin: 0 auto; }
 	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5);
 	border-radius: 8px;
 }
+#playground,aside div.sourceCode { background-color: #ededed; padding: 1.12em 0; box-shadow: 3px 3px 6px rgba(43, 83, 117,.5); border-radius: 8px; }
+/**********************
+** Source Code holder **
+***********************/
+aside  { padding: 0.52%;  }
+	aside h2 { text-align: center; }
+	aside p { max-width: 800px; text-align: center; margin: 0.56em auto; }
+		aside p a { font-size: 110%; text-decoration: none; }
+	aside div.sourceCode { width: 80%;  display: none; margin: 0 auto; border: 8px solid #CCC; }
+		aside div.sourceCode iframe { width: 85%; height: 800px; margin: 0 auto; display: block; }
+/***********
+** footer **
+***********/
+footer p { text-align: center; }
+/*******************
+** Particular css **
+********************
+**     #record    **
+*******************/
 /***********
 ** Record **
 ************/
@@ -70,7 +89,3 @@ header { width: 80%; margin: 0 auto; }
 	#record li.game-lost:hover { background-color: rgba(189,63,50,1); }
 	#record li.game-canceled { color: #616161; background-color: rgba(43,43,43,0.25); font-style: italic; }
 	#record li.game-canceled:hover { color: #f2f2f2; background-color: rgba(43,43,43,1); }
-/***********
-** footer **
-***********/
-footer p { text-align: center; }
