--- a/a01/css/style.css
+++ b/a01/css/style.css
@@ -9,7 +9,7 @@
 ** General CSS **
 ****************/
 body { font-family: 'Gentium Basic', serif; font-size: 100%; margin: 0 auto; }
-#playground,aside { width: 90%;	margin: 0 auto; }
+#playground,#paginationaside { width: 90%;	margin: 0 auto; }
 /***********
 ** header **
 ***********/
@@ -22,6 +22,12 @@ header { width: 80%; margin: 0 auto; }
 ***************/
 #playground { min-width: 600px; font-family: 'Dosis', sans-serif; text-align: center; border: 8px solid #474747; }
 #playground,aside div.sourceCode { background-color: #ededed; padding: 1.12em 0; box-shadow: 3px 3px 6px rgba(43, 83, 117,.5); border-radius: 8px; }
+/*****************
+**  pagination  **
+*****************/
+#pagination { overflow: hidden; }
+	#pagination .left { float: left; }
+	#pagination .right { float: right; }
 /**********************
 ** Source Code holder **
 ***********************/
