--- a/a06/css/style.css
+++ b/a06/css/style.css
@@ -11,6 +11,7 @@
 body { font-family: 'Gentium Basic', serif; font-size: 100%; margin: 0 auto; }
 button { position: relative; z-index: 999; }
 section { display: block; }
+#playground,#pagination,aside { width: 90%;	margin: 0 auto; }
 /***********
 ** header **
 ***********/
@@ -22,18 +23,40 @@ header { width: 80%; margin: 0 auto; }
 ** playground **
 ***************/
 #playground {
-	width: 90%;
 	min-height: 250px;
 	min-width: 600px;
 	background-color: #EDEDED;
 	font-family: 'Dosis', sans-serif;
-	margin: 0 auto;
 	border: 8px solid #474747;
 	box-sizing: border-box;
 	box-shadow: 3px 3px 6px rgba(43, 83, 117,.5);
 	border-radius: 8px;
 }
 	#playground h2 { text-align: center; margin: 0.56em auto; padding: 0; }
+/*****************
+**  pagination  **
+*****************/
+#pagination { overflow: hidden; }
+	#pagination .left { float: left; }
+	#pagination .right { float: right; }
+/**********************
+** Source Code holder **
+***********************/
+aside  { padding: 0.52%;  }
+	aside h2 { text-align: center; }
+	aside p { max-width: 800px; text-align: center; margin: 0.56em auto; }
+		aside p a { font-size: 110%; text-decoration: none; }
+	aside div.sourceCode { width: 80%;  display: none; margin: 0 auto; border: 8px solid #CCC; }
+		aside div.sourceCode iframe { width: 85%; height: 800px; margin: 0 auto; display: block; }
+/***********
+** footer **
+***********/
+footer p { text-align: center; }
+
+
+/*********************
+**  Particular css  **
+*********************/
 /************
 ** sandbox **
 ************/
@@ -44,7 +67,3 @@ header { width: 80%; margin: 0 auto; }
 .h,.v { display:flex; flex:1 1 auto; }
 .v { flex-direction:column; }
 .h { flex-direction:row; }
-/***********
-** footer **
-***********/
-footer p { text-align: center; }
