--- a/a03/css/style.css
+++ b/a03/css/style.css
@@ -34,7 +34,7 @@ header { width: 80%; margin: 0 auto; }
 /*****************
 **  pagination  **
 *****************/
-#pagination { overflow: hidden; }
+#pagination { overflow: hidden; margin-bottom: -4.12em; }
 	#pagination .left { float: left; }
 	#pagination .right { float: right; }
 /**********************
