--- a/a04/style.css
+++ b/a04/style.css
@@ -26,7 +26,7 @@ header { width: 80%; text-align: center; margin: 0 auto; }
 /*****************
 **  pagination  **
 *****************/
-#pagination { overflow: hidden; }
+#pagination { overflow: hidden; margin-bottom: -4.12em; }
 	#pagination .left { float: left; }
 	#pagination .right { float: right; }
 /**********************
